result add in static pages

--- a/staticpages/education/results/index.html
+++ b/staticpages/education/results/index.html
@@ -5,7 +5,7 @@
 <title>India Today - Education and Career news and updates - List of Courses, Results, Exams, Colleges and Jobs in India
 Description ? India Today Education - Find updates on jobs in India, results of Sarkari Job Exams, Board Exams, Management Entrance Exams, Engineering Entrance Exams, Universities Exams, Banking, SSC, MBA and all other Competitive Exams</title>
 <meta name="keywords" content="Results, Exams, Education Updates, Notifications, Board Exams, Board Exam results, CAT exam, CAT results, Bank exams, Scholarships, Fellowships, education in India, Study Abroad, Career counseling, jobs, Jobs in India, Government jobs, Media jobs, Recruitment, Bank Recruitment, PO Exams, SSC">
-<link href="../css/style-sheet.css" rel="stylesheet" type="text/css">
+<link href="/staticpages/education/results/style-sheet.css" rel="stylesheet" type="text/css">
 <style>
 .outer-wrapper{width:100%; margin:auto; background:white;}
 </style>
@@ -42,7 +42,7 @@ Description ? India Today Education - Find updates on jobs in India, results of 
 #headerblock h1{background:url("http://media2.intoday.in/indiatoday/education/images/logo.png") no-repeat scroll center center rgba(0, 0, 0, 0) !important}
 </style>
 
-<script src="http://indiatoday.intoday.in/js/sitejs.js"></script>
+<script src="/staticpages/main/js/sitejs.js"></script>
 
 
 
@@ -251,18 +251,18 @@ var zflag_nid="821"; var zflag_cid="2034/2029"; var zflag_sid="26"; var zflag_wi
 <div style="margin-bottom:10px;" align="center">
 </div>
         <div id="footer">
-                <iframe width="98%" scrolling="no" height="210" frameborder="0" src="/staticpages/main/microsites/common/common_it_footer.html"></iframe>
+                <iframe width="98%" scrolling="no" height="210" frameborder="0" src="http://media2.intoday.in/microsites/common/common_it_footer.html"></iframe>
 <div class="clear"></div>
                 
 				<div class="clear"></div>
                 
             </div>
         </footer>
-				<script type='text/javascript' src='http://indiatoday.intoday.in/education/js/ajaxfunction.js' ></script>
+				<script type='text/javascript' src='/staticpages/main/js/ajaxfunction.js' ></script>
 
 		<script type='text/javascript' src='http://code.jquery.com/jquery-1.7.2.min.js' ></script>
-        <script type="text/javascript" src="http://indiatoday.intoday.in/education/js/jquery.scroll.min.js"></script>
-        <script type="text/javascript" src="http://indiatoday.intoday.in/education/js/common.js"></script>
+        <script type="text/javascript" src="/staticpages/main/js/jquery.scroll.min.js"></script>
+        <script type="text/javascript" src="/staticpages/main/js/common.js"></script>
 		
 </div>
 </div>
