update static pages

--- a/staticpages/indiatomorrow/index.html
+++ b/staticpages/indiatomorrow/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<base href="/staticpages/indiatomorrow/" />
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>#INDIATOMORROW Short Film By Pradeep Sarkar - India Today</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,7 +8,7 @@
 <meta name="keywords" content="Pradeep Sarkar, #INDIATOMORROW, Pradeep Sarkar Short Film, India Today, Pradeep Sarkar writer  Pradeep Sarkar writer director, INDIA TOMORROW Short Film" >
 <link rel='shortcut icon' type='image/x-icon' href='/staticpages/main/images/dot-in-fav-icon.ico'/>
 <link href='http://fonts.googleapis.com/css?family=Roboto:400,300,400italic,500,500italic,700' rel='stylesheet' type='text/css'>
-<link href="http://itgd-mum-dev-static.s3.amazonaws.com/media/others/mediaintoday//microsites/indiatomorrow/2017/css/india-tomorrow.css" rel="stylesheet" type="text/css" />
+<link href="http://itgd-mum-dev-static.s3.amazonaws.com/media/others/mediaintoday/microsites/indiatomorrow/2017/css/india-tomorrow.css" rel="stylesheet" type="text/css" />
 
 <!-- Begin comScore Tag -->
 <script type='text/javascript'>
@@ -145,7 +144,7 @@ $(function(){
 
 
           <div class="thubnail-big" id="youtube-videos">
-            <iframe id="short-videoembeds" width='737' height='506' frameborder="0" src="intro-text.html" marginwidth="0" scrolling=no allowfullscreen></iframe>
+            <iframe id="short-videoembeds" width='737' height='506' frameborder="0" src="/staticpages/indiatomorrow/intro-text.html" marginwidth="0" scrolling=no allowfullscreen></iframe>
           </div>
         </div>
         <div class="small-thumblist">
