--- a/staticpages/indiatomorrow/intro.html
+++ b/staticpages/indiatomorrow/intro.html
@@ -138,7 +138,7 @@ document.getElementById('youtube-videos').innerHTML = '<iframe id="short-videoem
         
         
           <div class="thubnail-big" id="youtube-videos">
-            <iframe id="short-videoembeds" width='737' height='506' frameborder="0" src="intro-text.html" marginwidth="0" scrolling=no allowfullscreen></iframe>
+            <iframe id="short-videoembeds" width='737' height='506' frameborder="0" src="/staticpages/indiatomorrow/intro-text.html" marginwidth="0" scrolling=no allowfullscreen></iframe>
           </div>
         </div>
         <div class="small-thumblist">
