Add static page aishwaryarai

--- a/staticpages/aishwaryarai/index.html
+++ b/staticpages/aishwaryarai/index.html
@@ -35,7 +35,7 @@ GA_googleFetchAds();
         	<div class="contentleft">
             	<div class="topchunk">  
 				   <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
-                    <script type="text/javascript" src="js/slideshow.js"></script>
+                    <script type="text/javascript" src="aishwaryarai/js/slideshow.js"></script>
                     <div id="gallery">
                         <a href="http://indiatoday.intoday.in/story/its-a-baby-girl-for-aishwarya-abhishek/1/160180.html" target="_blank" class="show">
                             <img src="http://itgd-mum-dev-static.s3.amazonaws.com/media/others/mediaintoday/indiatoday/images/stories/2011November/abhi-ash-1_111611103017.jpg" alt="Aishwarya Rai" width="663" height="415" title="Aishwarya Rai" rel="<span><h3></span>"/></a>
