--- a/staticpages/educationsummit/index.html
+++ b/staticpages/educationsummit/index.html
@@ -792,9 +792,56 @@
                 <div class="clear"></div>
             </div>
 		</section>  
-		<footer>
-			
-       	</footer>
+		<div class="presenting">
+	<div class="presentingbox">
+    	<div class="presmar">PRESENTED BY</div>
+            <table cellpadding="0" cellspacing="0" align="center">
+            <tr><td width="150" align="center" valign="top">
+            <div class="partnerbox" style="width:160px">
+            <a href="http://www.srmuniv.ac.in/" target="_blank"><img src="/educationsummit/images/SRM.gif" border="0" style="margin-top:15px;" /></a></div></td></tr></table>
+          <div class="clear"></div>
+        </div>
+    </div>
+    
+    <div class="partnerband">
+        
+        <table cellpadding="0" cellspacing="0" align="center">
+            <tr>
+            <td width="150" align="center" valign="top">
+                <div class="partnerbox">
+                    <div class="partmar5">BEVERAGE PARTNER</div>
+                    <div class="partnerbox" style="float:left;">
+                        <a href="/educationsummit/"><img src="/educationsummit/images/beverage-partner.gif" border="0" style="margin-top:5px;" /></a>
+                    </div>
+                </div>
+            </td>
+            <td width="150" align="center" valign="top">
+                <div class="partnerbox">
+                    <div class="partmar5">NEWSPAPER PARTNER</div>
+                    <div class="partnerbox" style="float:left;">
+                        <a href="http://mailtoday.in" target="_blank"><img src="/educationsummit/images/Mail_today.gif" border="0" style="margin-top:5px;" /></a>
+                    </div>
+                </div>
+            </td>
+            <td width="150" align="center" valign="top">
+                <div class="partnerbox">
+                    <div class="partmar10">TV PARTNER</div>
+                    <a href="http://www.headlinestoday.in/" target="_blank"><img src="/educationsummit/images/HLT.gif" border="0" hspace="1" /></a>
+                </div>
+            </td>
+            <td width="150" align="center" valign="top">
+                <div class="partnerbox">
+                    <div class="partmar10">ONLINE PARTNER</div>
+                    <a href="/" target="_blank"><img src="/educationsummit/images/India_today.gif" border="0" hspace="1" /></a>
+                </div>
+            </td>
+            </tr>
+        </table>
+        <div class="clear"></div>
+    </div>
+    <div align="center"> <iframe src="http://itgd-mum-dev-static.s3.amazonaws.com/media/others/mediaintoday/microsites/common/it_footer.html" frameborder="0" scrolling="no" width="1003" height="130"></iframe>
+</div>
+
     </div>
 </body>
 </html>
